# robin-stocks-mcp

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
docs/plans/: 2026-02-11-robinhood-mcp-design.md  2026-02-11-robinhood-mcp-implementation.md
robin_stocks_mcp/: server.py
robin_stocks_mcp/models/: __init__.py  base.py  market.py  options.py  portfolio.py
robin_stocks_mcp/robinhood/: client.py  errors.py
robin_stocks_mcp/services/: __init__.py  fundamentals.py  market_data.py  news.py  options.py  portfolio.py  watchlists.py
robinhood-core/: pyproject.toml
tests/unit/: test_models_market.py  test_models_options.py  test_models_orders.py  test_models_portfolio.py  test_robinhood_client.py  test_server.py  test_service_integration.py  test_service_market_data.py  test_service_news.py  test_service_option_positions.py  test_service_options.py  test_service_orders.py  test_service_portfolio.py  test_service_watchlists.py
