[project]
name = "robinhood-core"
version = "0.1.0"
description = "Shared models, services, and client for Robinhood tools"
requires-python = ">=3.11"
dependencies = [
    "robin-stocks>=3.0.0",
    "pydantic>=2.0.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
